@@ -13,6 +13,8 @@
 	  generation failure and file not found, as generation failure is only
 	  triggered on first image rendering, and later they are virtually
 	  undistinguishable, especially for certain notations.
+	* scorerender-class.php, scorerender-admin.php wp-scorerender.php:
+	- Move global ScoreRender options into SrNotationBase class.
 
 2010-03-19  Abel Cheung  <abelcheung@gmail.com>
 
